<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:padding="10dip"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content">

    <Spinner
            android:id="@+id/user_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:prompt="@string/user_prompt"
            />

    <LinearLayout android:orientation="vertical"
                  android:id="@+id/lecturer_layout"
                  android:padding="10dip"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:visibility="invisible"
                  android:layout_below="@+id/user_spinner">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/department_prompt"
                />
        <Spinner
                android:id="@+id/department_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/department_prompt"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/lecturer_prompt"
                />
        <Spinner
                android:id="@+id/lecturer_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/lecturer_prompt"
                />
    </LinearLayout>

    <LinearLayout android:orientation="vertical"
                  android:id="@+id/student_layout"
                  android:padding="10dip"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/user_spinner">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/course_prompt"
                />
        <Spinner
                android:id="@+id/course_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/course_prompt"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/group_prompt"
                />
        <Spinner
                android:id="@+id/group_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/group_prompt"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/subgroup_prompt"
                />
        <Spinner
                android:id="@+id/subgroup_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/subgroup_prompt"
                />
    </LinearLayout>

    <Button
            android:id="@+id/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="Go"
            android:layout_below="@+id/student_layout"
            />
</RelativeLayout>
