<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="10dip"
              android:background="#fff">

    <com.mmf.view.ToggleButton
            android:id="@+id/toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />


        <LinearLayout android:orientation="vertical"
                      android:id="@+id/layout_student"
                      android:padding="10dip"
                      android:layout_below="@id/toggle_button"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/course_prompt"
                    android:textColor="#0b386a"
                    />
            <Spinner
                    android:id="@+id/course_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/course_prompt"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/group_prompt"
                    android:textColor="#0b386a"
                    />
            <Spinner
                    android:id="@+id/group_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/group_prompt"
                    />
            <TextView
                    android:id="@+id/specialty"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:textColor="#0b386a"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:text="@string/subgroup_prompt"
                    android:textColor="#0b386a"
                    />
            <Spinner
                    android:id="@+id/subgroup_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/subgroup_prompt"
                    />
        </LinearLayout>

        <LinearLayout android:orientation="vertical"
                      android:id="@+id/layout_lecturer"
                      android:padding="10dip"
                      android:layout_below="@id/toggle_button"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:visibility="invisible">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/department_prompt"
                    android:textColor="#0b386a"
                    />
            <Spinner
                    android:id="@+id/department_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/department_prompt"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/lecturer_prompt"
                    android:textColor="#0b386a"
                    />
            <Spinner
                    android:id="@+id/lecturer_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/lecturer_prompt"
                    />
        </LinearLayout>


    <!--<Button-->
            <!--android:id="@+id/button_apply"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="30dip"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:text="Apply"-->
            <!--android:textColor="#fff"-->
            <!--android:background="#0b386a"-->
            <!--/>-->


    <RelativeLayout android:id="@+id/layout_login"
                  android:padding="10dip"
                  android:layout_marginBottom="10dip"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:background="#f0f0f0">

        <TextView android:id="@+id/text_login"
                android:layout_width="60dip"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#0b386a"
                />
        <EditText
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_login"
                android:layout_toRightOf="@id/text_login"
                android:layout_alignBaseline="@id/text_login"
                />
        <TextView android:id="@+id/text_password"
                  android:layout_below="@id/text_login"
                android:layout_width="60dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/password"
                android:textColor="#0b386a"
                />
        <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:layout_below="@id/text_password"
                android:layout_toRightOf="@id/text_password"
                android:layout_alignBaseline="@id/text_password"
                />
        <Button
                android:id="@+id/button_login"
                android:layout_below="@id/text_password"
                android:layout_width="fill_parent"
                android:layout_height="30dip"
                android:layout_marginTop="20dip"
                android:background="#0b386a"
                android:textColor="#fff"
                android:text="@string/button_login"

                />
    </RelativeLayout>

    <RelativeLayout android:id="@+id/layout_logout"
                  android:padding="10dip"
                  android:layout_marginBottom="10dip"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:background="#f0f0f0"
                  android:visibility="invisible">

        <TextView android:id="@+id/text_view_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#0b386a"
                />

        <TextView android:id="@+id/text_loginName"
                android:layout_below="@id/text_view_login"
                android:layout_toRightOf="@id/text_view_login"
                android:layout_marginLeft="10dip"
                android:layout_alignBaseline="@id/text_view_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#0b386a"
                />
        <Button
                android:id="@+id/button_logout"
                android:layout_below="@id/text_view_login"
                android:layout_width="fill_parent"
                android:layout_height="30dip"
                android:layout_marginTop="10dip"
                android:background="#0b386a"
                android:textColor="#fff"
                android:text="@string/button_logout"

                />

    </RelativeLayout>


</RelativeLayout>
